--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
 	</div>
 	</form>
 </section>
+<section class="contact">
+	<div class="contact-wrapper">
+		<h1>Contact information</h1>
+		<p class="question">Do you have questions or you just want to say "Hello"?</p>
+		<p class="reach-out">You can reach out to us!</p>
+		<ul>
+		<li>Our e-mail mail@mail.com</li>
+		<li>Our phone number 0043586634422444</li>
+		<li>Our address Streetname 22, 84503 City, Country.</li>
+		</ul>
+	</div>
+</section>
 
 <footer class="footer">
 	<div class="copyright">
