Update index.html file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		</div>
 		<div class="date-time"><span id="date-time"></span></div>
 	</header>
+
 	<section class="container1">
 		<h2>All awesome books</h2>
 		<div class="book-list" id="book-list">
@@ -45,15 +46,15 @@
 	</div>
 	</form>
 </section>
+
 <section class="contact">
 	<div class="contact-wrapper">
-		<h1>Contact information</h1>
-		<p class="question">Do you have questions or you just want to say "Hello"?</p>
-		<p class="reach-out">You can reach out to us!</p>
+		<h2>Contact information</h2>
+		<p class="question">Do you have questions or you just want to say "Hello"?<br>You can reach out to us!</p>
 		<ul>
-		<li>Our e-mail mail@mail.com</li>
-		<li>Our phone number 0043586634422444</li>
-		<li>Our address Streetname 22, 84503 City, Country.</li>
+		<li>Our e-mail: mail@mail.com</li>
+		<li>Our phone number: 0043586634422444</li>
+		<li>Our address: Streetname 22, 84503 City, Country.</li>
 		</ul>
 	</div>
 </section>
